# finde-rs

./: .travis.yml  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: constants.rs  crawler.rs  fileresource.rs  haslen.rs  index.rs  indexer.rs  main.rs  resource.rs  scheduler.rs
