[package]
name = "finde-rs"
version = "0.1.0"
authors = ["Raghavendra D Prabhu <me@rdprabhu.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.1"
crossbeam = "0.7.3"
tantivy = "0.11.3"
anyhow = "1.0.26"
structopt = "0.3.9"
clap-verbosity-flag = "0.3.1"
log = "0.4.8"
simple_logger = "1.5.0"
threadpool = "1.7.1"




[profile.dev]
debug = 0
