[package]
name = "finde-rs"
version = "0.1.3"
authors = ["Raghavendra Prabhu"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/ronin13/finde-rs"
repository = "https://github.com/ronin13/finde-rs"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["cli", "crawler", "threadpool", "channel"]
description = """
Multi-threaded filesystem crawler.
"""


[badges]
travis-ci = { repository = "ronin13/finde-rs" }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.1"
crossbeam = "0.7.3"
tantivy = "0.11.3"
anyhow = "1.0.31"
structopt = "0.3.9"
clap-verbosity-flag = "0.3.1"
log = "0.4.8"
simple_logger = "1.5.0"
threadpool = "1.7.1"
partial_application = "0.2.0"
num_cpus = "1.12.0"
rand = "0.7.3"




[profile.dev]
debug = 0

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-fmt"]
